--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     display: flex;
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+    margin-bottom: 114px;
 }
 
 .half-width {
@@ -68,4 +69,8 @@ body {
 
 .another-area p {
     margin-right: 97px;
+}
+
+.flexible-container {
+    display: flex;
 }
