--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+    margin-bottom: 114px;
 }
 
 
@@ -73,4 +74,36 @@ body {
 
 .flexible-container {
     display: flex;
+}
+
+.experience-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.experience-area h1 {
+    font-size: 40px;
+    margin-bottom: -13px;
+}
+
+.experience-item {
+    width: 40%;
+    padding-left: 110px;
+    box-shadow: 10px 10px 40px gray;
+    margin: 5%;
+    padding: 66px;
+
+}
+
+#Full-Stack-Developer {
+    border-left: 7px solid tomato;
+}
+
+#Baby-Web-Developer {
+    border-left: 7px solid blue;
+}
+
+.footer-area {
+    text-align: center;
 }
